salesforce-port/force-app/main/default/objects/Per_Diem_Rate__c/Per_Diem_Rate__c.object-meta.xml
<CustomObject>
    <label>Per Diem Rate</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Per Diem Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>