salesforce-port/force-app/main/default/objects/Per_Diem_Rate__c/fields/Meal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Meal_Rate__c</fullName>
    <label>Meal Rate</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>