salesforce-port/force-app/main/default/objects/Per_Diem_Rate__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>MasterDetail</type>
    <referenceTo>Expense_Policy__c</referenceTo>
    <relationshipLabel>Per Diem Rates</relationshipLabel>
    <relationshipName>Per_Diem_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>