salesforce-port/force-app/main/default/objects/Per_Diem_Rate__c/fields/Sub_Rate_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Rate_Name__c</fullName>
    <label>Sub Rate Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>